# SenseGlove-Robotics

./: .gitignore  CMakeLists.txt  README.md
examples/: README.md
examples/position_reader/: CMakeLists.txt
examples/read_position/: CMakeLists.txt  read_position.cpp
examples/read_position_fingers/: CMakeLists.txt  read_position_fingers.cpp
examples/send_force/: CMakeLists.txt  send_force.cpp
scripts/: README.md  glove_connect.sh
